<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layBirds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvHawk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/hawk"/>

        <TextView
            android:id="@+id/tvFirstBird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvHawk"
            tools:text="100"/>

        <TextView
            android:id="@+id/tvEagle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvHawk"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/eagle"/>

        <TextView
            android:id="@+id/tvSecondBird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvFirstBird"
            app:layout_constraintLeft_toRightOf="@+id/tvEagle"
            tools:text="100"/>

        <TextView
            android:id="@+id/tvVulture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvEagle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/vulture"/>

        <TextView
            android:id="@+id/tvThirdBird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvSecondBird"
            app:layout_constraintLeft_toRightOf="@+id/tvVulture"
            tools:text="100"/>

        <TextView
            android:id="@+id/tvSparrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvVulture"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/sparrow"/>

        <TextView
            android:id="@+id/tvFourthBird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvThirdBird"
            app:layout_constraintLeft_toRightOf="@+id/tvSparrow"
            tools:text="100"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnHawk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hawkbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layBirds"
        android:background="@color/hawk"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnEagle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eaglebtn"
        app:layout_constraintLeft_toRightOf="@id/btnHawk"
        app:layout_constraintTop_toBottomOf="@+id/layBirds"
        android:background="@color/eagle"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnVulture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vulturebtn"
        app:layout_constraintLeft_toRightOf="@id/btnEagle"
        app:layout_constraintTop_toBottomOf="@+id/layBirds"
        android:background="@color/vulture"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnSparrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sparrowbtn"
        app:layout_constraintLeft_toRightOf="@id/btnVulture"
        app:layout_constraintTop_toBottomOf="@+id/layBirds"
        android:background="@color/sparrow"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHawk"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>